--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -22,8 +22,8 @@ jobs:
           version: '0.15.0'
           args: '-- --test-threads 1'
 
-      # - name: Upload to codecov.io
-      #   uses: codecov/codecov-action@v1.0.2
+      - name: Upload to codecov.io
+        uses: codecov/codecov-action@v2
       #   with:
       #     token: ${{secrets.CODECOV_TOKEN}}
       #
