--- a/.trunk/trunk.yaml
+++ b/.trunk/trunk.yaml
@@ -1,18 +1,25 @@
 version: 0.1
 cli:
-  version: 0.17.0-beta
+  version: 1.2.1
 plugins:
   sources:
     - id: trunk
-      ref: v0.0.3
+      ref: v0.0.8
       uri: https://github.com/trunk-io/plugins
 lint:
   enabled:
-    - actionlint@1.6.17
-    - clippy@1.58.1
+    - actionlint@1.6.22
+    - clippy@1.65.0
     - git-diff-check@SYSTEM
-    - gitleaks@8.12.0
+    - gitleaks@8.15.2
     - markdownlint@0.32.2
-    - prettier@2.7.1
-    - rustfmt@1.58.1
-    - taplo@release-taplo-cli-0.7.0
+    - prettier@2.8.1
+    - rustfmt@1.65.0
+    - taplo@0.7.0
+actions:
+  enabled:
+    - trunk-upgrade-available
+runtimes:
+  enabled:
+    - go@1.18.3
+    - node@16.14.2
