--- a/.github/workflows/grcov.yml
+++ b/.github/workflows/grcov.yml
@@ -2,9 +2,9 @@ name: coverage by grcov
 
 on:
   push:
-    branches: [ "master" ]
+    branches: [ "main" ]
   pull_request:
-    branches: [ "master" ]
+    branches: [ "main" ]
 
 env:
   CARGO_TERM_COLOR: always
