--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,7 @@
 [package]
-name = "csd-rs"
-version = "0.1.0"
+name = "csd-rs"      # the name of the package
+version = "0.1.0"    # the current version, obeying semver
+authors = ["Wai-Shing Luk <luk036@gmail.com>"]
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
