--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ path = "src/lib.rs"
 [dependencies]
 argparse = "0.2.2"
 log = "0.4.28"
+svgbobdoc = { version = "0.3", default-features = false }
 # rand = "0.5.5"
 # structopt = "0.3.26"
 
@@ -26,6 +27,10 @@ quickcheck = "1"
 quickcheck_macros = "1.1.0"
 criterion = "0.7.0"
 pprof = { version = "0.15.0", features = ["flamegraph"] }
+
+[features]
+default = []
+docsrs = ["svgbobdoc/enable"]
 
 
 [[bench]]
