--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,7 @@ svgbobdoc = { version = "0.3", default-features = false }
 quickcheck = "1"
 quickcheck_macros = "1.1.0"
 criterion = "0.7.0"
+serial_test = "3.0.0"
 # pprof = { version = "0.15.0", features = ["flamegraph"] }
 
 [features]
